* Modified: BG color on context-information set to F5F5F5 to improve contrast on bad LCDs * Modified: Corrected sorting on subitem's json query.

--- a/design/admin2/stylesheets/theme/rounded.css
+++ b/design/admin2/stylesheets/theme/rounded.css
@@ -199,7 +199,7 @@ a.show-hide-tabs:hover
 
 .context-information, .subitems-controlbar
 {
-    background-color:#f8f8f8;
+    background-color: #F5F5F5;
     border: 1px solid #ccc;
     -moz-border-radius-bottomleft: 3px;
     -moz-border-radius-bottomright: 3px;
